@@ -147,9 +147,7 @@ public:
 
   int mirror_index(int i) const
   {
-      CGAL_triangulation_precondition ( (i>=0) && (i<4) );
-      CGAL_triangulation_precondition ( is_valid() && 
-					neighbor(i).is_valid() );
+      CGAL_triangulation_precondition ( i>=0 && i<4 );
       return neighbor(i)->index(this);
   }
       
