@@ -1,6 +1,7 @@
 Version 1.75 (?? July 01)
 - Fix return type of Compare_distance_3 in the HierarchyTraits_3 doc.
 - Remove constructors for vertices in the doc.
+- Fix mirror_vertex() and mirror_index().
 
 Version 1.74 (13 July 01)
 - copy_tds() cleanups.
